--- a/style.css
+++ b/style.css
@@ -33,3 +33,15 @@ h1 {
   top: 15rem;
   left: 2rem;
 }
+
+a {
+  position: fixed;
+  top: 2rem;
+  right: 3rem;
+  color: #000;
+  text-decoration: none;
+  font-size: 2.5rem;
+  text-align: right;
+}
+
+ul
