--- a/style.css
+++ b/style.css
@@ -50,3 +50,17 @@ ul {
   right: 5rem;
   font-size: 2rem;
 }
+
+ul h3 {
+  color: #29415e;
+  font-size: 3rem;
+  margin: 0;
+}
+
+h2 {
+  position: fixed;
+  top: 30rem;
+  left: 20rem;
+  text-align: right;
+  font-size: 1.5rem;
+}
